2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp:
	(CMainFrame::OnFont): Disable "style" in font selection dialog.

	* src/appconfig.cpp, src/pcmanx_pure_gtk2.cpp:
	Add "Show tray icon" preference.

	* src/generalprefpage.cpp:
	Add "Show tray icon" and "Web browser" preference.

	* src/Makefile.am:
	Add all-local to strip the compiled executable file.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp:
	Some bug fix.
	
	* src/caret.cpp:
	Some minor bug fix.
	
	* src/mainframe.cpp:
	(CMainFrame::LoadStartupSites) :
	Automatically connect to some sites on startup.
	
	* src/telnetcon.cpp:
	Fix some problems related to multi-threading.
	
	* src/sitepage.cpp:
	Add "Connect on startup" check box.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp
	(CTermView::OnDestroy) : Removed
	(CTermView::OnBeforeDestroy) : Destroy XftDraw correctly.
	Destructor of CTermView can be called properly now.

	* src/mainframe.cpp (CMainFrame::CloseCon):
	Use wrapper function provided by CNotebook instead of raw gtk+ API.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermView::UpdateDisplay):
	* src/termdata.h
	Delay some sceen update when needed. Enhance drawing performance 
	and avoid some unnecessary flicker.

2005-07-03  Kanru Chen  <koster@debian.org.tw>

	* src/sitepage.cpp,
	src/sitepage.h,
	src/termview.cpp,
	src/site.cpp,
	src/mainframe.cpp,
	src/appconfig.cpp,
	src/termdata.h,
	src/site.h,
	src/telnetview.cpp:
	Add encoding preference.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::DrawChar):
	Enable drawing one double-byte character with two different colors.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::SetFontFamily):
	Recalculate font size when font family is changed.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/widget.cpp (CWidget::Refresh):
	Fix a typo.
